# workmemory

./: .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  ppocr_cli.spec  tsconfig.json  tsconfig.main.json  vite.config.ts
src/: App.tsx  main.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: fts5.sql  fts5_clean_episodes.sql  schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: ai_manager.rs  daily_distill_manager.rs  distill_manager.rs  distill_prompt.rs  feedback_loop.rs  hour_context_pack_builder.rs  html_exporter.rs  mod.rs  openai_client.rs  proactive_advisor.rs  reflection_engine.rs  report_comparator.rs  report_exporter.rs  report_generator.rs  sensitive_masker.rs  skill_evolver.rs  templates.rs  weekly_pattern_detector.rs
src-tauri/src/capture/: action_flow_inferrer.rs  activity_classifier.rs  browser_context_collector.rs  capture_decision.rs  capture_manager.rs  content_classifier.rs  cross_day_linker.rs  entity_extractor.rs  episode_builder.rs  episode_manager.rs  focus_streak_tracker.rs  incognito_detector.rs  layout_analyzer.rs  manual_episode_creator.rs  mod.rs  one_line_summary.rs  privacy_guard.rs  screenshot.rs  today_timeline.rs  todo_extractor.rs  window_watcher.rs
src-tauri/src/db/: database.rs  fts_tokenizer.rs  json.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/events/: bus.rs  mod.rs
src-tauri/src/insights/: anomaly_detector.rs  data_health_dashboard.rs  focus_state_detector.rs  goal_alignment_analyzer.rs  insights_manager.rs  mod.rs  reminder_scheduler.rs  time_audit_engine.rs  (+1 more)
(+331 files in other folders)
