[package]
name = "workmemory"
version = "0.3.0"
description = "WorkMemory 今日记忆 - Windows 本地工作记忆与认知资产助手"
authors = ["WorkMemory"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "workmemory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

# 数据库
rusqlite = { version = "0.31", features = ["bundled", "functions"] }

# Windows API
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Media_Ocr",
    "Graphics_Imaging",
    "Foundation",
    "Storage_Streams",
    "Globalization",
] }

# HTTP / 异步
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }

# 序列化 / 工具
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
regex = "1"
once_cell = "1"
hostname = "0.4"
whoami = "1"

# Embedding / 图像处理
# ort = { version = "2", features = ["download-binaries"] }
image = "0.25"

# 日志
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
